# GenAI

./: .gitignore  README.md  pyproject.toml
agent/: main.py
agent/playwright_browser/: main.py
agent/sql/: main.py  prompts.py  tools.py
agents/: llm.py  schema.py
app/: client.py  main.py  settings.py  utils.py
sandbox/: app.py  main.py  mock_data.csv
scraper/: extractor.py  llm.py
tests/: locustfile.py
