[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "browser-cookie3>=0.20.1",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]
