[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-modal>=0.0.3",
    "lxml>=6.0.3",
    "modal>=1.4.1",
    "pydantic-settings>=2.13.1",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]
